# sundaypaper

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DECISIONS.md  DISTRIBUTION.md  SESSION-PROGRESS-2026-06-03.md
sql/: 0001_init.sql  0002_asset_lib.sql  0003_doc_templates_sangbok.sql
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  app.rs  asset.rs  asset_lib.rs  block.rs  bulletin.rs  doc_template.rs  document.rs  export.rs  import_job.rs  mod.rs  pdf.rs  pdf_ops.rs  project.rs  sangbok.rs  setting.rs  song.rs  template.rs
src-tauri/src/services/: asset.rs  asset_lib.rs  block.rs  bulletin.rs  bulletin_contract.rs  db.rs  doc_template.rs  document.rs  export.rs  import_job.rs  mod.rs  pdf_ops.rs  project.rs  sangbok.rs  setting.rs  song.rs  template.rs
src-tauri/src/services/ai/: client.rs  mod.rs  parse.rs  prompt.rs
src-tauri/src/services/layout/: engine.rs  markup.rs  mod.rs
src-tauri/src/services/pdf/: edit.rs  mod.rs  plan.rs  render.rs
src-tauri/tests/fixtures/: service_plan.json
src/components/: CommandPalette.tsx  Sidebar.tsx  ThemeToggle.tsx  UpdateBanner.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  index.ts  input.tsx  page-preview.tsx  select.tsx  separator.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/features/assets/: AssetsPanel.test.tsx  AssetsPanel.tsx
src/features/builder/: BuilderPage.test.tsx  BuilderPage.tsx  PdfPreview.tsx  ServicePlanForm.tsx  plan-defaults.ts
src/features/builder/__snapshots__/: BuilderPage.test.tsx.snap
src/features/dashboard/: DashboardPage.tsx
src/features/design/: DesignPage.tsx
src/features/doc-templates/: DocTemplatesPanel.test.tsx  DocTemplatesPanel.tsx  docTemplateForm.test.ts  docTemplateForm.ts
src/features/editor/: BlockCard.tsx  BlockList.tsx  DocumentSelector.tsx  EditorPage.test.tsx  EditorPage.tsx  TableEditor.tsx  block-kinds.ts  flatten-hierarchy.test.ts  flatten-hierarchy.ts  reparent-options.test.ts  reparent-options.ts  table-grid.test.ts  table-grid.ts
src/features/export/: ExportPage.test.tsx  ExportPage.tsx  theme-form.test.ts  theme-form.ts
src/features/forms/: FormsPage.test.tsx  FormsPage.tsx
src/features/import-jobs/: ImportJobsPanel.test.tsx  ImportJobsPanel.tsx  importJobView.test.ts  importJobView.ts
src/features/projects/: ProjectsPanel.tsx
src/features/sangbok/: SangbokPanel.tsx
src/features/settings/: SettingsPage.test.tsx  SettingsPage.tsx  settings-keys.ts
src/features/songs/: SongsPanel.test.tsx  SongsPanel.tsx  songForm.test.ts  songForm.ts
src/features/templates/: TemplatesPanel.test.tsx  TemplatesPanel.tsx  typst-lint.test.ts  typst-lint.ts
src/lib/: ipc.ts  queryKeys.ts  theme.ts  updater.ts
src/lib/bindings/: AppInfo.ts  Asset.ts  AssetKind.ts  AssetLibEntry.ts  AssetRef.ts  BatchExportResult.ts  Block.ts  BlockSpec.ts  DocTemplate.ts  DocTemplateKind.ts  Document.ts  ExportOptions.ts  ExportedFile.ts  FormField.ts  ImportJob.ts  IntentCompileResult.ts  IntentRequest.ts  LayoutMeta.ts  LayoutTheme.ts  PdfInfo.ts  PdfPageInfo.ts  Project.ts  SangbokJob.ts  SangbokJobStatus.ts  ScriptureRef.ts  ServicePlan.ts  SetlistItem.ts  SetlistItemKind.ts  Setting.ts  Song.ts  SongExtract.ts  SongRef.ts  Template.ts  TemplateVar.ts  TemplateVarInput.ts  TemplateVarKind.ts  index.ts
src/styles/: globals.css  tokens.css
tests/e2e/: smoke.spec.ts
tests/integration/: builder-pipeline.test.ts  editor-flow.test.ts  ipc.test.ts  sidebar.test.tsx
