[package]
name = "sundaypaper"
version = "0.1.0"
description = "Document & print companion for churches — part of the Sunday suite"
authors = ["Richard Fossland"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sundaypaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data layer — local-first SQLite via sqlx. Runtime-checked queries (no
# DATABASE_URL / .sqlx needed at compile time).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }

# Type generation for the frontend (run with `cargo test export_bindings`)
ts-rs = { version = "11", features = ["serde-compat"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
# Later phases add optional native deps behind features so the default build
# compiles with no heavy toolchain, no network and no keys:
#   ai  = ["dep:reqwest"]        # Anthropic client (Phase 5)
#   pdf = ["dep:pdfium-render"]  # PDF render/extract (Phase 1.2)
#   ocr = ["dep:leptess"]        # Tesseract OCR (Phase 3.1)
