[package]
name = "sundaypaper"
version = "0.2.2"
description = "Document & print companion for churches — part of the Sunday suite"
authors = ["Richard Fossland"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sundaypaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Shared Sunday Account (SSO): read the cross-app session this app shares with
# the rest of the suite (login happens in SundayRec). Distributed by git tag
# (see sunday-platform README) so each app builds standalone in CI — a path dep
# would break the single-repo checkout. For local sunday-auth co-dev, override
# with a `[patch]` in .cargo/config.toml.
sunday-auth = { git = "https://github.com/richardfossland/sunday-platform.git", tag = "v0.2.0" }
# Auto-update + relaunch (desktop only) — wired in lib.rs behind #[cfg(desktop)].
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data layer — local-first SQLite via sqlx. Runtime-checked queries (no
# DATABASE_URL / .sqlx needed at compile time).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }

# Type generation for the frontend (run with `cargo test export_bindings`)
ts-rs = { version = "11", features = ["serde-compat"] }

# PDF layer (Phase 1.2), behind the `pdf` feature — see [features] below.
# lopdf is pure Rust (split/merge/rotate/extract, fully testable). pdfium-render
# + image cover rasterised render + text extraction and need the pdfium dynamic
# library present at runtime.
lopdf = { version = "0.40.0", optional = true }
# `image_025` selects pdfium-render's image integration pinned to image 0.25,
# matching our `image` dep so `PdfBitmap::as_image()` returns a unified type.
pdfium-render = { version = "0.9.1", optional = true, features = ["image_025"] }
image = { version = "0.25.10", default-features = false, features = ["png"], optional = true }

# Layout compilation (Phase 4.2), behind the `typst` feature — see [features]
# below. `typst` is the embedded compiler + standard library; `typst-pdf`
# exports the laid-out document to PDF bytes; `typst-assets` supplies a small
# set of embedded fonts so compilation needs no system fonts or external files.
# The pure source-string builder (`layout::markup`) is always compiled; only the
# in-memory compile step lives here.
typst = { version = "0.14", optional = true }
typst-pdf = { version = "0.14", optional = true }
typst-assets = { version = "0.14", features = ["fonts"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
# PDF read/render/manipulation (Phase 1.2). The default build compiles without
# it and the engine stubs return a clear `feature_disabled` error; the pure
# planning logic (page-range parsing, split planning, rotation) is always built
# and unit-tested. Enable with `cargo test --features pdf`.
pdf = ["dep:lopdf", "dep:pdfium-render", "dep:image"]
# Typst compilation (Phase 4.2) — the final FORWARD-pipeline step that turns the
# generated Typst source (always-on `layout::markup`) into PDF bytes. The
# default build compiles without it and `layout::engine::compile` returns a
# clear `feature_disabled` error; the embedded compiler + bundled fonts mean the
# enabled path needs no system fonts or files. Enable with
# `cargo test --features typst`.
typst = ["dep:typst", "dep:typst-pdf", "dep:typst-assets"]
# Later phases add more optional native deps behind features:
#   ai  = ["dep:reqwest"]   # Anthropic client (Phase 5)
#   ocr = ["dep:leptess"]   # Tesseract OCR (Phase 3.1)
